@startuml
'https://plantuml.com/class-diagram



abstract class Category {
}
class StandardCategory {
}
class BudgetCategory {
}
class Budget {
}
class Spent {
}

class BudgetController {
}

class CategoryController {
}

class History {
}

class IHM {
}

class Period {
}

class BudgetMoment {
}

class CategoryMoment {
}

Category <|-- StandardCategory
Category <|-- BudgetCategory

Budget <--* BudgetCategory : -budget
Category "*" <-right-* "1" Budget : -categories
Category "1" <-right-* "1" Spent : -category
StandardCategory "1" *--> "0" Spent : -spentList

@enduml